<resources>
    <string name="app_name">Toeic600</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_grammar">Sổ tay ngữ pháp</string>
    <string name="action_vocabulary">Sổ tay từ vựng</string>
    <string name="action_basic_test">Bài tập cơ bản</string>
    <string name="action_exam">Luyện đề</string>
    <string name="title_process">Tiến độ</string>
    <string name="action_share">Chia sẻ</string>
    <string name="action_setting">Cài đặt</string>
    <string name="action_rating">Đánh giá</string>
    <string name="action_about">Giới thiệu</string>
    <string name="title_communicate">Liên hệ</string>
    <string name="action_submit">Nộp bài</string>
    <string name="title_auto_next">Tự động chuyển</string>
    <string name="action_test">Kiểm tra</string>
    <string name="title_lesson">Bài\u0020</string>
    <string name="title_question">Câu\u0020</string>
    <string name="title_vocabulary_question">\u0020có nghĩa là?</string>
    <string name="title_mark">Đạt:</string>
    <string name="title_time">Thời gian:</string>
    <string name="title_reading">Đọc:</string>
    <string name="title_listening">Nghe:</string>
    <string name="action_review">Xem lại</string>
    <string name="action_continue">Tiếp tục</string>
    <string name="file">.pdf</string>
    <string name="title_number_true">Số câu đúng:</string>
    <string name="title_number_false">Số câu sai:</string>
    <string name="title_very_good">Xuất sắc</string>
    <string name="title_good">Tốt</string>
    <string name="title_normal">Bình thường</string>
    <string name="title_bad">Cần cố gắng hơn</string>
    <string name="title_very_bad">Cần cố gắng hơn nữa</string>
    <string name="title_intro_1">KHÔNG CẦN MÁY TÍNH</string>
    <string name="title_intro_2">HỌC KHI ĂN</string>
    <string name="title_intro_3">HỌC KHI NGỦ</string>
    <string name="des_intro_1">Với Toeic 600 bạn có thể học ở mọi nơi mọi chỗ mà không
        phải cần nhiều thứ hỗ trợ ngoài chiếc điện thoại thân yêu,</string>
    <string name="des_intro_2">Nếu bạn là người ít thời gian thì với chức năng trắc nghiệm
        giúp bạn tiết kiệm rất nhiều thời gian,</string>
    <string name="des_intro_3">Ngay cả khi lên giường với chức năng luyện nghe bạn
        cõ thể học ngay cả khi lường biếng nhất,</string>
    <string name="button_intro_1">Tiếp</string>
    <string name="button_intro_2">Bắt Đầu</string>
    <string name="title_name_user">Tên của bạn</string>
    <string name="title_target_user">Mục tiêu:</string>
    <string name="title_score">600</string>
    <string name="title_start">Start</string>
    <string name="notification_empty">Chọn ít nhất 1 bài</string>
    <string name="title_dialog_user">Cập nhật thông tin</string>
    <string name="title_name">Họ và tên</string>
    <string name="hint_name">Tên của bạn</string>
    <string name="title_target">Mục tiêu</string>
    <string name="hint_target">Mục tiêu của bạn</string>
    <string name="action_save">Lưu</string>
    <string name="action_cancel">Hủy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_part">Part:</string>
</resources>
