<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_320"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_title_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:text="@string/title_reading"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_3" />

    <TextView
        android:id="@+id/text_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_2"
        app:layout_constraintStart_toEndOf="@+id/text_title_5"
        app:layout_constraintTop_toBottomOf="@+id/text_title_3" />

    <TextView
        android:id="@+id/text_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:text="@string/title_listening"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_5" />

    <TextView
        android:id="@+id/text_listening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_4"
        app:layout_constraintStart_toEndOf="@+id/text_title_2"
        app:layout_constraintTop_toBottomOf="@+id/text_title_5" />

    <TextView
        android:id="@+id/text_title_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/title_time"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/button_review"
        app:layout_constraintEnd_toStartOf="@+id/text_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_16"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/button_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_title_4" />

    <Button
        android:id="@+id/button_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@drawable/button_review"
        android:text="@string/action_review"
        android:textColor="@color/material_white_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_continue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@drawable/button_continue"
        android:text="@string/action_continue"
        android:textColor="@color/material_white_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_review" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_title_2,text_title_5,text_reading,text_listening" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:isIndicator="true"
        android:numStars="5"
        android:theme="@style/RatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_number_true"
        android:textColor="@color/light_green_accent_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rating" />

    <TextView
        android:id="@+id/text_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/title_number_false"
        android:textColor="@color/red_accent_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_1" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/text_number_question_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:textColor="@color/light_green_accent_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_3"
        app:layout_constraintStart_toEndOf="@+id/text_title_1"
        app:layout_constraintTop_toBottomOf="@+id/text_rating" />

    <TextView
        android:id="@+id/text_number_question_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:textColor="@color/red_accent_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_title_5"
        app:layout_constraintStart_toEndOf="@+id/text_title_3"
        app:layout_constraintTop_toBottomOf="@+id/text_title_1" />

</android.support.constraint.ConstraintLayout>
